--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -63,7 +63,7 @@
                         android:layout_height="60dp"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
-                        app:srcCompat="@drawable/ic_square_pixel" />
+                        app:srcCompat="@drawable/ic_square_teal" />
 
                     <TextView
                         android:id="@+id/textView7"
@@ -89,14 +89,14 @@
                         android:layout_marginRight="16dp"
                         android:layout_marginBottom="8dp"
                         android:fontFamily="@font/timeburnernormal"
-                        android:onClick="openNavTGX"
+                        android:onClick="openTealX"
                         android:text="@string/view"
-                        android:textColor="@color/invInferno"
+                        android:textColor="@color/teal"
                         android:textSize="12sp"
                         android:textStyle="bold"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintStart_toEndOf="@+id/textView10"
                         app:layout_constraintTop_toBottomOf="@+id/textView7" />
 
                     <TextView
@@ -107,13 +107,14 @@
                         android:layout_marginLeft="8dp"
                         android:layout_marginEnd="8dp"
                         android:layout_marginRight="8dp"
+                        android:layout_marginBottom="4dp"
                         android:fontFamily="@font/timeburnernormal"
                         android:gravity="center"
                         android:onClick="downloadParser"
-                        android:tag="23"
+                        android:tag="25"
                         android:text="@string/download"
                         android:textSize="12sp"
-                        android:visibility="invisible"
+                        android:visibility="visible"
                         app:layout_constraintBottom_toBottomOf="@+id/textView8"
                         app:layout_constraintEnd_toStartOf="@+id/textView8"
                         app:layout_constraintStart_toStartOf="parent"
@@ -380,27 +381,50 @@
                                 android:id="@+id/textView38"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
+                                android:layout_marginStart="4dp"
+                                android:layout_marginLeft="4dp"
                                 android:layout_marginTop="12dp"
                                 android:fontFamily="@font/timeburnernormal"
                                 android:text="Pixel Blue"
                                 android:textColor="@color/pixelBlue"
                                 android:textStyle="bold"
+                                app:layout_constraintEnd_toEndOf="@+id/textView39"
+                                app:layout_constraintStart_toEndOf="@+id/textView37"
+                                app:layout_constraintTop_toTopOf="parent" />
+
+                            <TextView
+                                android:id="@+id/textView39"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginStart="8dp"
+                                android:layout_marginLeft="8dp"
+                                android:layout_marginTop="4dp"
+                                android:layout_marginEnd="8dp"
+                                android:layout_marginRight="8dp"
+                                android:fontFamily="@font/timeburnernormal"
+                                android:text="Teal"
+                                android:textColor="@color/teal"
+                                android:textStyle="bold"
                                 app:layout_constraintEnd_toEndOf="parent"
                                 app:layout_constraintStart_toStartOf="parent"
-                                app:layout_constraintTop_toTopOf="parent" />
+                                app:layout_constraintTop_toBottomOf="@+id/textView37" />
 
                             <TextView
                                 android:id="@+id/textView37"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_marginTop="4dp"
+                                android:layout_marginStart="12dp"
+                                android:layout_marginLeft="12dp"
+                                android:layout_marginTop="12dp"
+                                android:layout_marginEnd="4dp"
+                                android:layout_marginRight="4dp"
                                 android:fontFamily="@font/timeburnernormal"
                                 android:text="Inferno"
                                 android:textColor="@color/invInferno"
                                 android:textStyle="bold"
-                                app:layout_constraintEnd_toEndOf="parent"
-                                app:layout_constraintStart_toStartOf="parent"
-                                app:layout_constraintTop_toBottomOf="@+id/textView38" />
+                                app:layout_constraintEnd_toStartOf="@+id/textView38"
+                                app:layout_constraintStart_toStartOf="@+id/textView39"
+                                app:layout_constraintTop_toTopOf="parent" />
 
                         </android.support.constraint.ConstraintLayout>
 
