--- a/app/src/main/res/layout/fragment_navigation_tgxthemes.xml
+++ b/app/src/main/res/layout/fragment_navigation_tgxthemes.xml
@@ -41,18 +41,69 @@
                     tools:layout_editor_absoluteY="63dp">
 
                     <android.support.v7.widget.CardView
-                        android:id="@+id/cardViewButton7"
+                        android:id="@+id/cardViewButton8"
                         android:layout_width="70dp"
                         android:layout_height="95dp"
                         android:layout_marginEnd="16dp"
                         android:layout_marginRight="16dp"
-                        android:onClick="openPixelBlueX"
+                        android:onClick="openTealX"
                         android:visibility="visible"
                         app:cardBackgroundColor="@android:color/transparent"
                         app:cardCornerRadius="12dp"
                         app:cardElevation="0dp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toEndOf="@+id/cardViewButton7"
+                        app:layout_constraintTop_toTopOf="parent">
+
+                        <android.support.constraint.ConstraintLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent">
+
+                            <ImageView
+                                android:id="@+id/imageView14"
+                                android:layout_width="0dp"
+                                android:layout_height="0dp"
+                                android:layout_marginStart="2dp"
+                                android:layout_marginLeft="2dp"
+                                android:layout_marginTop="2dp"
+                                android:layout_marginEnd="2dp"
+                                android:layout_marginRight="2dp"
+                                android:scaleType="fitCenter"
+                                app:layout_constraintBottom_toTopOf="@+id/textView10"
+                                app:layout_constraintEnd_toEndOf="parent"
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintTop_toTopOf="parent"
+                                app:srcCompat="@drawable/ic_square_teal" />
+
+                            <TextView
+                                android:id="@+id/textView10"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginBottom="8dp"
+                                android:fontFamily="@font/timeburnernormal"
+                                android:gravity="center"
+                                android:text="Teal"
+                                android:textColor="@color/teal"
+                                app:layout_constraintBottom_toBottomOf="parent"
+                                app:layout_constraintEnd_toEndOf="@+id/imageView14"
+                                app:layout_constraintStart_toStartOf="@+id/imageView14"
+                                app:layout_constraintTop_toBottomOf="@+id/imageView14" />
+                        </android.support.constraint.ConstraintLayout>
+
+                    </android.support.v7.widget.CardView>
+
+                    <android.support.v7.widget.CardView
+                        android:id="@+id/cardViewButton7"
+                        android:layout_width="70dp"
+                        android:layout_height="95dp"
+                        android:onClick="openPixelBlueX"
+                        android:visibility="visible"
+                        app:cardBackgroundColor="@android:color/transparent"
+                        app:cardCornerRadius="12dp"
+                        app:cardElevation="0dp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toStartOf="@+id/cardViewButton8"
                         app:layout_constraintStart_toEndOf="@+id/cardViewButton6"
                         app:layout_constraintTop_toTopOf="parent">
 
