+ Updated android's dependencies, everything's probably going to break + Added the ability to change title bar name based on the page + Really minor changes that no one would notice - Shrinked app size by 1MB :O - Fixed the back button in TGX themes - Fixed Inverted Inferno's wrong link

--- a/app/src/main/res/layout/fragment_navigation_inverted.xml
+++ b/app/src/main/res/layout/fragment_navigation_inverted.xml
@@ -236,7 +236,7 @@
                         android:layout_height="95dp"
                         android:layout_marginEnd="32dp"
                         android:layout_marginRight="32dp"
-                        android:onClick="openSteam"
+                        android:onClick="openInvertedInferno"
                         android:visibility="visible"
                         app:cardBackgroundColor="@android:color/transparent"
                         app:cardCornerRadius="12dp"
