--- a/app/src/main/res/layout/fragment_tealx.xml
+++ b/app/src/main/res/layout/fragment_tealx.xml
@@ -22,7 +22,7 @@
                 android:layout_marginEnd="125dp"
                 android:layout_marginRight="125dp"
                 android:layout_marginBottom="12dp"
-                android:onClick="openNavPureBlack"
+                android:onClick="openNavTGX"
                 app:cardBackgroundColor="#fff"
                 app:cardCornerRadius="12dp"
                 app:cardElevation="15dp"
