--- a/app/src/main/res/layout/fragment_au.xml
+++ b/app/src/main/res/layout/fragment_au.xml
@@ -6,7 +6,7 @@
 
 
     <include
-        layout="@layout/bottom_nav_bar"
+        layout="@layout/bottom_nav_bar_pb"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
