--- a/app/src/main/res/layout/fragment_teal.xml
+++ b/app/src/main/res/layout/fragment_teal.xml
@@ -263,8 +263,8 @@
                         android:layout_marginBottom="15dp"
                         android:fontFamily="@font/timeburnernormal"
                         android:gravity="center"
-                        android:onClick="openTeal"
-                        android:text="TEAL"
+                        android:onClick="openMonster"
+                        android:text="MONSTER"
                         android:textSize="12sp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="@+id/imageView7"
