--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -63,7 +63,7 @@
                         android:layout_height="60dp"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
-                        app:srcCompat="@drawable/ic_square_inverted" />
+                        app:srcCompat="@drawable/ic_square_jam" />
 
                     <TextView
                         android:id="@+id/textView7"
@@ -72,7 +72,9 @@
                         android:fontFamily="@font/timeburnernormal"
                         android:gravity="center"
                         android:text="@string/news1Content"
+                        android:textColor="#fff"
                         android:textSize="12sp"
+                        android:textStyle="bold"
                         app:layout_constraintBottom_toBottomOf="@+id/imageView3"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toEndOf="@+id/imageView3"
@@ -89,9 +91,9 @@
                         android:layout_marginRight="16dp"
                         android:layout_marginBottom="8dp"
                         android:fontFamily="@font/timeburnernormal"
-                        android:onClick="openStandard"
+                        android:onClick="openJamX"
                         android:text="@string/view"
-                        android:textColor="#fff"
+                        android:textColor="@color/jam"
                         android:textSize="12sp"
                         android:textStyle="bold"
                         app:layout_constraintBottom_toBottomOf="parent"
@@ -111,8 +113,9 @@
                         android:fontFamily="@font/timeburnernormal"
                         android:gravity="center"
                         android:onClick="downloadParser"
-                        android:tag="0"
+                        android:tag="27"
                         android:text="@string/download"
+                        android:textColor="#fff"
                         android:textSize="12sp"
                         android:visibility="visible"
                         app:layout_constraintBottom_toBottomOf="@+id/textView8"
@@ -559,7 +562,7 @@
                         android:maxEms="20"
                         android:singleLine="false"
                         android:text="@string/inverted_string_home"
-                        android:textColor="#C3C3C3"
+                        android:textColor="#CCCCCC"
                         android:textSize="16sp"
                         app:layout_constraintEnd_toEndOf="@+id/cardViewButton2"
                         app:layout_constraintStart_toStartOf="parent"
