--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,6 +13,7 @@
     <color name="red">#ff1928</color>
     <color name="redleaf">#f84f43</color>
     <color name="inferno">#b31818</color>
+    <color name="jam">#970053</color>
 
 
     <color name="greenSunset">#22f8a0</color>
