--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -31,7 +31,7 @@
     <color name="orange">#f9961f</color>
 
     <color name="phlox">#df00ff</color>
-    <color name="saints">#7c31be</color>
+    <color name="saints">#8734d1</color>
     <color name="disrespect">#f832c0</color>
     <color name="disrespectBlue">#509cda</color>
 
